--- a/views/config.hbs
+++ b/views/config.hbs
@@ -1,6 +1,9 @@
 <div class="row">
     <div class="large-12 columns">
-        <label>recalbox.conf</label>
-        <textarea placeholder="small-12.columns" style="height: 500px;">{{conf}}</textarea>
+        <form id="" action="/" method="post">
+            <label>recalbox.conf</label>
+            <textarea name="recalboxconf" placeholder="small-12.columns" style="height: 500px;">{{conf}}</textarea>
+            <input type="submit" value="save" class="small radius button"/>
+        </form>
     </div>
 </div>
