Fix path href roms

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -30,7 +30,7 @@
               <ul class="off-canvas-list">
                   <li><label>Recalbox</label></li>
                   <li><a href="/">Home</a></li>
-                  <li><a href="/Roms">Roms</a></li>
+                  <li><a href="/Roms/home">Roms</a></li>
                   <li><a href="/Bios">Bios</a></li>
                   <li><a href="/Config">Config</a></li>
                   <li><a href="/Log">Log</a></li>
