--- a/views/roms.hbs
+++ b/views/roms.hbs
@@ -2,14 +2,27 @@
     <div class="large-4 medium-4 columns">
         <div class="callout panel">
             <h3>System section</h3>
-            list of system here
+            <div class="row">
+            {{#each directory}}
+                <div class="large-12 medium-12 columns">
+                    <a href="/Roms/{{this}}">{{this}}</a>
+                </div>
+            {{/each}}
+            </div>
         </div>
+
     </div>
 
     <div class="large-8 medium-8 columns">
         <div class="callout panel">
             <h3>Folders section</h3>
-            Dragndrop here
+            <div class="row">
+                {{#each files}}
+                    <div class="large-3 medium-3 columns">
+                     {{this}}
+                    </div>
+                {{/each}}
+            </div>
         </div>
     </div>
 </div>
