--- a/views/config.hbs
+++ b/views/config.hbs
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="large-12 columns">
-        <form id="" action="/" method="post">
+        <form id="" action="/Config" method="post">
             <label>recalbox.conf</label>
             <textarea name="recalboxconf" placeholder="small-12.columns" style="height: 500px;">{{conf}}</textarea>
             <input type="submit" value="save" class="small radius button"/>
