--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -34,6 +34,8 @@
                   <li><a href="/Bios">Bios</a></li>
                   <li><a href="/Config">Config</a></li>
                   <li><a href="/Log">Log</a></li>
+                  <li><a href="http://blog.recalbox.com/forums">Forum</a> </li>
+                  <li><a href="https://kiwiirc.com/client/irc.freenode.net/#recalbox">IRC</a> </li>
               </ul>
           </aside>
 
