Add social icons in top menu

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -14,9 +14,9 @@
   <div class="fixed">
       <nav class="top-bar top-bar-recalbox" data-topbar role="navigation">
           <ul class="title-area">
-              <li class="name">
+              <li class="name menu-logo">
                   <h1>
-                      <a href="#"><img class="menu-logo" src="/images/logo.png" /></a>
+                      <a href="#"><img src="/images/logo.png" /></a>
                   </h1>
               </li>
               <!-- Remove the class "menu-icon" to get rid of menu icon. Take out "Menu" to just have icon alone -->
@@ -26,14 +26,8 @@
           <section class="top-bar-section">
               <!-- Right Nav Section -->
               <ul class="right">
-                  <li class="has-dropdown">
-                      <a href="#">Liens</a>
-                      <ul class="dropdown">
-                          <li><a href="http://blog.recalbox.com/forums">Forum</a> </li>
-                          <li><a href="https://kiwiirc.com/client/irc.freenode.net/#recalbox">IRC</a> </li>
-                      </ul>
-                  </li>
-                  <li><a href="#"><i class="social__icon fa fa-facebook"></i></a></li>
+                  <li class="social-icon-menu"><a href="#"><i class="fi-social-facebook size-16"></i></a></li>
+                  <li class="social-icon-menu"><a href="https://github.com/digitalLumberjack/recalbox-os" target="_blank"><i class="fi-social-github size-16"></i></a></li>
               </ul>
 
               <!-- Left Nav Section -->
@@ -43,6 +37,13 @@
                   <li><a href="/Bios">Bios</a></li>
                   <li><a href="/Config">Config</a></li>
                   <li><a href="/Log">Log</a></li>
+                  <li class="has-dropdown">
+                      <a href="#">Liens</a>
+                      <ul class="dropdown">
+                          <li><a href="http://blog.recalbox.com/forums">Forum</a> </li>
+                          <li><a href="https://kiwiirc.com/client/irc.freenode.net/#recalbox">IRC</a> </li>
+                      </ul>
+                  </li>
               </ul>
           </section>
       </nav>
