--- a/views/roms.hbs
+++ b/views/roms.hbs
@@ -17,24 +17,43 @@
             <h3>{{sltPath}} section</h3>
             <div class="row">
                 <div class="large-12 medium-12 columns">
-                    <table>
-                        <thead>
-                        <tr>
-                            <th>Game</th>
-                            <th>Trash it</th>
-                        </tr>
-                        </thead>
-                        <tbody>
-                        {{#each  files}}
-                            <tr>
-                                <td>{{this.name}}</td>
-                                <td><a href="/Roms/delete/{{this.section}}/{{this.name}}" class="item"><i class="fi-trash"></i> </a> </td>
-                            </tr>
-                        {{/each}}
-                        </tbody>
-                    </table>
+                    <div id="simpleUpload">
+
+                        <!-- http://css-tricks.com/css3-progress-bars/ -->
+                        <div class="meter">
+                            <span class="roller"></span>
+                        </div>
+
+                        <form action="/Upload" class="dropzone" id="logoDropZone">
+                            <input type="hidden" name="userName" value="user"/>
+                        </form>
+                    </div>
+
+                    <!-- Also checkout BS example : http://www.dropzonejs.com/bootstrap.html -->
+
                 </div>
             </div>
         </div>
+        <div class="row">
+            <div class="large-12 medium-12 columns">
+                <table>
+                    <thead>
+                    <tr>
+                        <th>Game</th>
+                        <th>Trash it</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    {{#each  files}}
+                        <tr>
+                            <td>{{this.name}}</td>
+                            <td><a href="/Roms/delete/{{this.section}}/{{this.name}}" class="item"><i class="fi-trash"></i> </a> </td>
+                        </tr>
+                    {{/each}}
+                    </tbody>
+                </table>
+            </div>
+        </div>
     </div>
+</div>
 </div>
