--- a/views/roms.hbs
+++ b/views/roms.hbs
@@ -1,18 +1,18 @@
 <div class="row">
-    <div class="large-4 medium-4 columns">
+    <div class="large-12 medium-12 columns">
         <div class="callout panel">
             <h3>System section</h3>
         </div>
         <div class="row">
             {{#each directory}}
                 <div class="large-4 medium-4 columns">
-                    <a href="/Roms/{{this}}" class="radius button">{{this}}</a>
+                    <a href="/Roms/{{this}}" class="small radius button">{{this}}</a>
                 </div>
             {{/each}}
         </div>
     </div>
 
-    <div class="large-8 medium-8 columns">
+    <div class="large-12 medium-12 columns">
         <div class="callout panel">
             <h3>{{sltPath}} section</h3>
             <div class="row">
