Top bar menu: remove social icons in mobile mode

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -25,7 +25,7 @@
 
           <section class="top-bar-section">
               <!-- Right Nav Section -->
-              <ul class="right">
+              <ul class="right hide-for-small-only">
                   <li class="social-icon-menu"><a href="https://twitter.com/digitaLumberjak" target="_blank"><i class="fi-social-twitter size-16"></i></a></li>
                   <li class="social-icon-menu"><a href="https://www.facebook.com/recalbox" target="_blank"><i class="fi-social-google-plus size-16"></i></a></li>
                   <li class="social-icon-menu"><a href="https://www.facebook.com/recalbox" target="_blank"><i class="fi-social-facebook size-16"></i></a></li>
