Roms: add drop zone feature

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -6,6 +6,8 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
       <link rel="stylesheet" href="/stylesheets/foundation.css" />
       <link rel="stylesheet" href="/stylesheets/foundation-icons.css" />
+      <link rel="stylesheet" href="/stylesheets/dropzone.css" />
+      <link rel="stylesheet" href="/stylesheets/basic.css" />
       <link rel="stylesheet" href="/stylesheets/app.css" />
 
   </head>
@@ -62,6 +64,7 @@
     <script src="/javascripts/vendor/jquery.js"></script>
     <script src="/javascripts/foundation.min.js"></script>
     <script src="/javascripts/vendor/modernizr.js"></script>
+    <script src="/javascripts/vendor/dropzone.js"></script>
     <script>
         $(document).foundation();
     </script>
