--- a/views/roms.hbs
+++ b/views/roms.hbs
@@ -48,7 +48,7 @@
                     <form action="/Roms/upload/{{sltPath}}" method="POST" enctype="multipart/form-data" class="dropzone" id="logoDropZone">
                         <input type="hidden" name="userName" value="user"/>
                         <input type="file" name="file" multiple="true" />
-                        <input type="submit" value="Upload" />
+                        <!--<input type="submit" value="Upload" />-->
                     </form>
                     <!-- Also checkout BS example : http://www.dropzonejs.com/bootstrap.html -->
 
