--- a/src/app/views/bios.hbs
+++ b/src/app/views/bios.hbs
@@ -1,23 +1,40 @@
 
 <div class="row">
     <div class="large-12 medium-12 columns">
-        <table>
-            <thead>
-            <tr>
-                <th>Bios</th>
-                <th>Hash</th>
-                <th>Trash it</th>
-            </tr>
-            </thead>
-            <tbody>
-            {{#each  files}}
-                <tr>
-                    <td>{{this.name}}</td>
-                    <td>{{this.hash}}</td>
-                    <td><a href="/Bios/delete//{{this.name}}" class="item"><i class="fi-trash"></i> </a> </td>
-                </tr>
-            {{/each}}
-            </tbody>
-        </table>
+        <div class="row">
+            <div class="large-8 medium-8 small-12 columns">
+                <table>
+                    <thead>
+                    <tr>
+                        <th>Bios</th>
+                        <th>Hash</th>
+                        <th>Trash it</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    {{#each  files}}
+                        <tr>
+                            <td>{{this.name}}</td>
+                            <td>{{this.hash}}</td>
+                            <td><a href="/Bios/delete/{{this.name}}" class="item"><i class="fi-trash"></i> </a> </td>
+                        </tr>
+                    {{/each}}
+                    </tbody>
+                </table>
+            </div>
+            <div class="large-4 medium-4 small-12 columns">
+                <div id="simpleUpload">
+                    <h4>Ajouter des bios</h4>
+                    <!-- http://css-tricks.com/css3-progress-bars/ -->
+                    <div class="meter">
+                        <span class="roller"></span>
+                    </div>
+                    <form action="/Bios/upload/{{sltPath}}" method="POST" enctype="multipart/form-data" class="dropzone" id="logoDropZone">
+                        <input type="hidden" name="userName" value="user"/>
+                        <input type="file" name="file" multiple="true" />
+                    </form>
+
+                </div>
+        </div>
     </div>
 </div>
