Fixed page title, separated view templates for system index and rom list

--- a/src/app/views/layout.hbs
+++ b/src/app/views/layout.hbs
@@ -2,7 +2,7 @@
 <!--[if IE 8]> <html class="no-js lt-ie9" lang=" lang="en""> <![endif]-->
 <!--[if gt IE 8]><!--> <html class="no-js" lang="en"> <!--<![endif]-->
 <head>
-    <title>{{title}} - Recalbox management</title>
+    <title>{{page_title}} - Recalbox management</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/recalbox.min.css">
@@ -50,7 +50,7 @@
 
 <div class="row">
     <div class="large-12 columns">
-        <h1>{{pageTitle}}</h1>
+        <h1>{{page_title}}</h1>
     </div>
 </div>
 
