--- a/src/app/views/log.hbs
+++ b/src/app/views/log.hbs
@@ -1,8 +1,6 @@
 <div class="row">
     <div class="large-12 columns">
-
-            <label>recalbox.log</label>
-            <textarea name="recalboxconf" placeholder="small-12.columns" style="height: 500px;">{{conf}}</textarea>
-
+        <label>recalbox.log</label>
+        <textarea name="recalboxconf" style="height: 500px;">{{conf}}</textarea>
     </div>
 </div>
