--- a/src/app/views/rom_list.hbs
+++ b/src/app/views/rom_list.hbs
@@ -1,18 +1,6 @@
 <div class="row">
     <div class="large-12 medium-12 columns">
-        <div class="callout panel">
-            <h3>System section</h3>
-        </div>
-        <ul class="small-block-grid-6" style="text-align: center">
-            {{#each directory}}
-                <li class="">
-                    <a href="/Roms/{{this}}">
-                        <i class="fi-folder" style="color: #E08942; font-size: 3em"></i><br />
-                        {{this}}
-                    </a>
-                </li>
-            {{/each}}
-        </ul>
+        <a href="/Roms/home">&lt; Back to system list</a>
     </div>
 
     <hr />
@@ -60,5 +48,4 @@
             </div>
         </div>
     </div>
-</div>
 </div>
