--- a/src/app/views/config.hbs
+++ b/src/app/views/config.hbs
@@ -1,9 +1,13 @@
 <div class="row">
     <div class="large-12 columns">
         <form id="" action="/Config" method="post">
-            <label>recalbox.conf</label>
+        <div>
+            <label>Content</label>
             <textarea name="recalboxconf" placeholder="small-12.columns" style="height: 500px;">{{conf}}</textarea>
-            <input type="submit" value="save" class="small radius button"/>
+        </div>
+        <div class="text-center">
+            <input type="submit" value="Save" class="small radius button"/>
+        </div>
         </form>
     </div>
 </div>
