--- a/src/app/views/layout.hbs
+++ b/src/app/views/layout.hbs
@@ -48,13 +48,15 @@
     </nav>
 </div>
 
-<div class="row">
-    <div class="large-12 columns">
-        <h1>{{page_title}}</h1>
+<div id="body_content">
+    <div class="row">
+        <div class="large-12 columns">
+            <h1>{{page_title}}</h1>
+        </div>
     </div>
-</div>
 
-{{{body}}}
+    {{{body}}}
+</div>
 
 <script src="/js/vendor.min.js"></script>
 <script type="text/javascript">
