--- a/src/app/views/rom_index.hbs
+++ b/src/app/views/rom_index.hbs
@@ -3,7 +3,7 @@
         <div class="callout panel">
             <h3>System section</h3>
         </div>
-        <ul class="small-block-grid-6" style="text-align: center">
+        <ul class="small-block-grid-6 text-center">
             {{#each directory}}
                 <li class="">
                     <a href="/Roms/{{this}}">
