--- a/src/app/views/index.hbs
+++ b/src/app/views/index.hbs
@@ -1,1 +1,14 @@
-<h2>Nothing here yet</h2>
+<div class="row">
+    <div class="large-12 columns">
+        <div class="panel">
+            <h2>Beta version </h2>
+            <p>Bienvenue sur l'interface web vous permettant d'administrer la votre recalbox.
+            De nombreuses fonctionnalités viendront s'ajouter au fur et à mesure. Vous
+            pouvez ajouter des roms, les bios avec un systeme vérifiant la validité du fichier
+            et l'edition du fichier recalbox.conf</p>
+            <p>Welcome to the web interface allowing you to manage your recalbox.
+                Many features will be implement in the futur. You can add rom, bios with hash checking and
+                you can edit recalbox.conf file</p>
+        </div>
+    </div>
+</div>
