--- a/src/app/views/index.hbs
+++ b/src/app/views/index.hbs
@@ -12,3 +12,11 @@
         </div>
     </div>
 </div>
+<div class="row">
+    <div class="large-12 columns">
+        <div class="panel">
+            <h2>Feedback</h2>
+            <p>Need feedback on <a href="https://github.com/MikaXII/recalbox-webconfig/issues">Github</a> or <a href="http://blog.recalbox.com/forums">Recalbox forums</a></p>
+        </div>
+    </div>
+</div>
